Trying to fix the IAEGraph since it is not rendering on mobile view

--- a/frontend/src/components/statistics/income-vs-expense/IncomeVSExpense.scss
+++ b/frontend/src/components/statistics/income-vs-expense/IncomeVSExpense.scss
@@ -91,7 +91,7 @@
     .income-vs-expense-chart {
         display: grid;
         width: 100%;
-        grid-template-rows: 1fr 0.3fr 0.2fr;
+        grid-template-rows: 400px 0.3fr 0.2fr;
     
         .chart-stats {
             grid-column: 1/3;
@@ -104,6 +104,9 @@
         .chart-div {
             grid-column: 1/3;
             grid-row: 1/2;
+            display: flex;
+            align-items: center;
+            vertical-align: middle;
             .pie-chart {
                 margin: 0 auto;
                 padding-right: 40px;
